# MedJEPA

./: .gitignore  COMMITMENTS_AND_AVAILABILITY.md  FORM_FILLING_GUIDE.md  GSOC_Proposal_CauST_Pratham.docx  GSOC_Proposal_MedJEPA_Pratham.docx  GSOC_Proposal_MedJEPA_Pratham.md  KAGGLE_GUIDE.md  LICENSE  README.md  READY_TO_PASTE_RESPONSES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: base_config.yaml
docs/: CONTRIBUTING.md  KAGGLE_GUIDE.md
examples/: minimal_medjepa.py
medjepa/: __init__.py
medjepa/data/: __init__.py  augmentations.py  datasets.py  dicom_utils.py  masking.py  preprocessing.py
medjepa/evaluation/: __init__.py  few_shot.py  fine_tune.py  linear_probe.py  segmentation.py
medjepa/models/: __init__.py  encoder.py  lejepa.py  predictor.py  vjepa.py
medjepa/training/: __init__.py  losses.py  trainer.py
medjepa/utils/: __init__.py  device.py  visualization.py
notebooks/: 01_explore_data.ipynb  02_test_preprocessing.ipynb  03_test_masking.ipynb  04_test_model.ipynb  05_results_analysis.ipynb
results/: evaluation_results.json
scripts/: _eval_worker.py  check_datasets.py  clean_corrupted_images.py  download_chestxray_remaining.py  download_data.py  evaluate.py  extract_chestxray_remaining.py  generate_plots_final.py  generate_training_curves.py  precache_images.py  preextract_slices.py  pretrain.py  reorganize_chestxray.py  run_gpu_full.py
tests/: test_core.py
